# TradeMe-Web-Automation

./: .env  Dockerfile  README.md  interactive_console_output.xml  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html
data/: Accounts.csv
libraries/: Account_Manager.py
libraries/Account/: AccountManager.py
libraries/Dialog/: DialogManager.py
resources/Common/: Keywords.resource  Variables.resource
resources/LoginPage/: Keywords.resource  Locators.resource  Variables.resource
resources/RegisterPage/: Keywords.resource  Locators.resource  Variables.resource
tests/: register.robot
